--- a/src/app/features/table/table.component.html
+++ b/src/app/features/table/table.component.html
@@ -1,60 +1,35 @@
-<!--<table mat-table [dataSource]="rooms$" class="mat-elevation-z8">-->
-
-<!--  <ng-container matColumnDef="position">-->
-<!--    <th mat-header-cell *matHeaderCellDef> No. </th>-->
-<!--    <td mat-cell *matCellDef="let element"> {{element.position}} </td>-->
-<!--  </ng-container>-->
-
-<!--  <ng-container matColumnDef="name">-->
-<!--    <th mat-header-cell *matHeaderCellDef> Name </th>-->
-<!--    <td mat-cell *matCellDef="let element"> {{element.name}} </td>-->
-<!--  </ng-container>-->
-
-<!--  <ng-container matColumnDef="type">-->
-<!--    <th mat-header-cell *matHeaderCellDef> Type </th>-->
-<!--    <td mat-cell *matCellDef="let element"> {{element.type}} </td>-->
-<!--  </ng-container>-->
-
-<!--  <ng-container matColumnDef="status">-->
-<!--    <th mat-header-cell *matHeaderCellDef> Status </th>-->
-<!--    <td mat-cell *matCellDef="let element"> {{element.status}} </td>-->
-<!--  </ng-container>-->
-
-<!--  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>-->
-<!--  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>-->
-<!--</table>-->
-
-
-<!--<button mat-raised-button (click)="addNewRoom()">Add Room</button>-->
-
 <div class="table-container">
   <table mat-table [dataSource]="rooms$" class="mat-elevation-z8">
-
-    <!-- Column: No -->
     <ng-container matColumnDef="position">
       <th mat-header-cell *matHeaderCellDef> No. </th>
       <td mat-cell *matCellDef="let element; let i = index"> {{ i + 1 }} </td>
     </ng-container>
 
-    <!-- Column: Name -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Name </th>
       <td mat-cell *matCellDef="let element"> {{ element.name }} </td>
     </ng-container>
 
-    <!-- Column: Type -->
     <ng-container matColumnDef="type">
       <th mat-header-cell *matHeaderCellDef> Type </th>
       <td mat-cell *matCellDef="let element"> {{ element.type }} </td>
     </ng-container>
 
-    <!-- Column: Status -->
     <ng-container matColumnDef="status">
       <th mat-header-cell *matHeaderCellDef> Status </th>
-      <td mat-cell *matCellDef="let element"> {{ element.status }} </td>
+      <td mat-cell *matCellDef="let element" class="status-cell">
+        <div class="status-container">
+          <span>{{ element.status }}</span>
+          <ng-container *ngIf="element.status === RoomStatus.OCCUPIED">
+            <mat-icon class="status-icon occupied" aria-hidden="true">close</mat-icon>
+          </ng-container>
+          <ng-container *ngIf="element.status === RoomStatus.AVAILABLE">
+            <mat-icon class="status-icon available" aria-hidden="true">check</mat-icon>
+          </ng-container>
+        </div>
+      </td>
     </ng-container>
 
-    <!-- Header and Rows -->
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
