--- a/src/app/features/table/table.component.html
+++ b/src/app/features/table/table.component.html
@@ -34,5 +34,6 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
-  <button mat-raised-button (click)="addNewRoom()">Add Room</button>
+  <button mat-raised-button color="primary" (click)="openAddRoomDialog()">Add Room</button>
+
 </div>
